# energy-study

./: README.md  Swagger.json  pyproject.toml
.github/workflows/: tests.yaml
energy_study/: cluster_compute.py  clustering.py  common.py  data_preprocessing.py  eda_ecmwf.py  eda_grib.py  eda_meteo.py  eda_pred_err.py  eda_random.py  eda_rte_forecast.py  main.py  rte_api.py  ts_autocorrelation.py  ts_iid.py  ts_stationarity.py  ts_toolbox.py
python-client/: README.md  setup.py
python-client/docs/: ActualGenerationsPerProductionType.md  ActualGenerationsPerProductionTypeObj.md  ActualGenerationsPerUnit.md  ActualGenerationsPerUnitObj.md  DefaultApi.md  Error.md  ErrorErrorDetails.md  GenerationMix15minTimeScale.md  GenerationMix15minTimeScaleObj.md  UnitActualGenerationsPerUnit.md  ValueActualGenerationsPerProductionType.md  ValueActualGenerationsPerUnit.md  ValueGenerationMix15minTimeScale.md  ValueWaterReserves.md  WaterReserves.md  WaterReservesObj.md
python-client/generation_client/: __init__.py  api_client.py  configuration.py  rest.py
python-client/generation_client/api/: __init__.py  default_api.py
python-client/generation_client/models/: __init__.py  actual_generations_per_production_type.py  actual_generations_per_production_type_obj.py  actual_generations_per_unit.py  actual_generations_per_unit_obj.py  error.py  error_error_details.py  generation_mix15min_time_scale.py  generation_mix15min_time_scale_obj.py  unit_actual_generations_per_unit.py  value_actual_generations_per_production_type.py  value_actual_generations_per_unit.py  value_generation_mix15min_time_scale.py  value_water_reserves.py  water_reserves.py  water_reserves_obj.py
python-client/test/: test_actual_generations_per_production_type.py  test_actual_generations_per_production_type_obj.py  test_actual_generations_per_unit.py  test_actual_generations_per_unit_obj.py  test_default_api.py  test_error.py  test_error_error_details.py  test_generation_mix15min_time_scale.py  test_generation_mix15min_time_scale_obj.py  test_unit_actual_generations_per_unit.py  test_value_actual_generations_per_production_type.py  test_value_actual_generations_per_unit.py  test_value_generation_mix15min_time_scale.py  test_value_water_reserves.py  test_water_reserves.py  test_water_reserves_obj.py
tests/EXP/zip_agppt/: actual_generations_per_production_typeEC09-RG01.v1.0.1.json  actual_generations_per_production_typeEC09-RG02.v1.0.1.json  actual_generations_per_production_typeEC09-RG05.v1.0.1.json
tests/EXP/zip_agpu/: actual_generations_per_unitEC10-RG01.v1.0.1.json  actual_generations_per_unitEC10-RG02.v1.0.1.json  (+1 more)
(+3 files in other folders)
