# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "energy-study"
version = "0.1.0"
description = "Basic python repository template"
authors = ["Clément Brutti-Mairesse <clement.brutti.mairesse@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ClementBM/energy-study"
repository = "https://github.com/ClementBM/energy-study"
keywords = ["mykeyword", "mykeyword", "mykeyword"]
include = [
    "LICENSE",
]

# https://pypi.org/classifiers/
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.8"
tslearn = "^0.5.2"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
statsmodels = "^0.13.5"
ecmwf-api-client = "^1.6.3"
python-dotenv = "^0.21.0"
xarray = "^2022.12.0"
pygrib = "^2.1.4"
cartopy = "^0.21.1"
cfgrib = "^0.9.10.3"
ecmwflibs = "^0.5.0"
rpy2 = "^3.5.6"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
mypy = "*"
jupyter = "*"
notebook = "*"
ipykernel = "*"
black = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"